Adding new option: hoverState

--- a/examples/index.html
+++ b/examples/index.html
@@ -387,6 +387,11 @@ bower install jquery-bar-rating
 						</p>
 
 						<p>
+							<strong>hoverState: true</strong><br>
+							Change state on hover.
+						</p>
+
+						<p>
 							<strong>wrapperClass: 'br-wrapper'</strong><br>
 							Specify the name of wrapper div's class.
 						</p>
