Deprecating wrapperClass option

--- a/examples/index.html
+++ b/examples/index.html
@@ -399,7 +399,8 @@ npm install jquery-bar-rating
 
 						<p>
 							<strong>wrapperClass: 'br-wrapper'</strong><br>
-							Specify the name of wrapper div's class.
+							Specify the name of wrapper div's class.<br>
+							<small class="warning"><b>Deprecated: `wrapperClass` option will be removed, please use `theme` option instead.</b></small>
 						</p>
 
 					</div>
@@ -416,7 +417,7 @@ npm install jquery-bar-rating
 
 						<p>
 							<strong>$('select').barrating('set', value);</strong><br>
-							Sets the value of rating widget.
+							Sets the value of the rating widget.
 						</p>
 
 						<p>
