--- a/examples/index.html
+++ b/examples/index.html
@@ -421,6 +421,11 @@ npm install jquery-bar-rating
 						</p>
 
 						<p>
+							<strong>$('select').barrating('readonly', state);</strong><br>
+							Toggles the read-only state. State can be true or false.<br>
+						</p>
+
+						<p>
 							<strong>$('select').barrating('clear');</strong><br>
 							Clears the rating.
 						</p>
