Adding new option: silent

--- a/examples/index.html
+++ b/examples/index.html
@@ -398,6 +398,11 @@ npm install jquery-bar-rating
 						</p>
 
 						<p>
+							<strong>silent: false</strong><br>
+							Supress callbacks when controlling ratings programatically.
+						</p>
+
+						<p>
 							<strong>wrapperClass: 'br-wrapper'</strong><br>
 							Specify the name of wrapper div's class.<br>
 							<small class="warning"><b>Deprecated: `wrapperClass` option will be removed, please use `theme` option instead.</b></small>
