--- a/examples/index.html
+++ b/examples/index.html
@@ -427,7 +427,7 @@ npm install jquery-bar-rating
 
 						<p>
 							<strong>$('select').barrating('readonly', state);</strong><br>
-							Toggles the read-only state. State can be true or false.<br>
+							Switches the read-only state to true or false.<br>
 						</p>
 
 						<p>
