--- a/examples/index.html
+++ b/examples/index.html
@@ -35,6 +35,7 @@
     <link rel="stylesheet" href="../dist/themes/fontawesome-stars.css">
     <link rel="stylesheet" href="../dist/themes/css-stars.css">
     <link rel="stylesheet" href="../dist/themes/bootstrap-stars.css">
+    <link rel="stylesheet" href="../dist/themes/fontawesome-stars-o.css">
 
     <!-- Fonts -->
     <link href="http://fonts.googleapis.com/css?family=Lato:300,400" rel="stylesheet" type="text/css">
@@ -172,7 +173,7 @@
         </div>
         <div class="row">
           <div class="col col-fullwidth">
-            <div class="star-ratings">
+            <div class="star-ratings start-ratings-main clearfix">
               <h1>How about star ratings?</h1>
               <p>The plugin comes with a few flavours of star ratings compatible with popular libraries.</p>
               <div class="stars stars-example-fontawesome">
@@ -204,6 +205,33 @@
                   <option value="5">5</option>
                 </select>
                 <span class="title">Bootstrap</span>
+              </div>
+            </div>
+          </div>
+          <div class="col col-fullwidth">
+            <div class="star-ratings">
+              <p>It can be used to display fractional star ratings.</p>
+              <div class="stars stars-example-fontawesome-o">
+                <select id="example-fontawesome-o" name="rating" data-current-rating="5.6">
+                  <option value=""></option>
+                  <option value="1">1</option>
+                  <option value="2">2</option>
+                  <option value="3">3</option>
+                  <option value="4">4</option>
+                  <option value="5">5</option>
+                  <option value="6">6</option>
+                  <option value="7">7</option>
+                  <option value="8">8</option>
+                  <option value="9">9</option>
+                  <option value="10">10</option>
+                </select>
+                <span class="title current-rating">
+                  Current rating: <span class="value"></span>
+                </span>
+                <span class="title your-rating hidden">
+                  Your rating: <span class="value"></span>&nbsp;
+                  <a href="#" class="clear-rating"><i class="fa fa-times-circle"></i></a>
+                </span>
               </div>
             </div>
           </div>
@@ -313,6 +341,10 @@ npm install jquery-bar-rating
             <p>
               <strong>showSelectedRating: true</strong><br>
               If set to true, user selected rating will be displayed next to the widget.
+            </p>
+            <p>
+              <strong>deselectable: true</strong><br>
+              If set to true, user can deselect a rating. For this feature to work the select field must contain a first option with an empty value.
             </p>
             <p>
               <strong>reverse: false</strong><br>
