Adding a note on keyboard navigation

--- a/examples/index.html
+++ b/examples/index.html
@@ -524,6 +524,15 @@ $('#example').barrating('show', {
                 `silent`</a> option.
               </p>
             </div>
+            <div  class="question">
+              <p>
+                <strong>Is keyboard navigation supported?</strong>
+              </p>
+              <p>
+                Since the rating widget consists of anchor elements, you can tab or shift-tab between
+                elements and press `Enter` to select a rating.
+              </p>
+            </div>
           </div>
         </div>
         <div class="license" id="nav-license">
