Adding a note about R language integration

--- a/examples/index.html
+++ b/examples/index.html
@@ -528,6 +528,19 @@ $('#example').barrating('show', {
                 elements and press `Enter` to select a rating.
               </p>
             </div>
+            <div class="question">
+              <p>
+                <strong>Can the plugin be used outside of Javascript ecosystem?</strong>
+              </p>
+              <p>
+                Harvey Lieberman (<a href="https://github.com/harveyl888" target="_blank">@harveyl888</a>) created
+                an R htmlwidget wrapper for the jQuery Bar Rating plugin. For more details go to:
+              </p>
+              <p>
+                <a href="https://github.com/harveyl888/barRating" target="_blank">
+                  https://github.com/harveyl888/barRating</a>
+              </p>
+            </div>
           </div>
         </div>
         <div class="license" id="nav-license">
