Switching autocomplete to off for better cross-browser consistency

--- a/examples/index.html
+++ b/examples/index.html
@@ -75,7 +75,7 @@
             <div class="box box-orange box-example-1to10">
               <div class="box-header">1/10 Rating</div>
               <div class="box-body">
-                <select id="example-1to10" name="rating">
+                <select id="example-1to10" name="rating" autocomplete="off">
                   <option value="1">1</option>
                   <option value="2">2</option>
                   <option value="3">3</option>
@@ -94,7 +94,7 @@
             <div class="box box-blue box-example-movie">
               <div class="box-header">Movie Rating</div>
               <div class="box-body">
-                <select id="example-movie" name="rating">
+                <select id="example-movie" name="rating" autocomplete="off">
                   <option value="Bad">Bad</option>
                   <option value="Mediocre">Mediocre</option>
                   <option value="Good" selected="selected">Good</option>
@@ -109,7 +109,7 @@
             <div class="box box-blue box-example-square">
               <div class="box-header">Square Rating</div>
               <div class="box-body">
-                <select id="example-square" name="rating">
+                <select id="example-square" name="rating" autocomplete="off">
                   <option value=""></option>
                   <option value="1">1</option>
                   <option value="2">2</option>
@@ -124,7 +124,7 @@
             <div class="box box-green box-example-pill">
               <div class="box-header">Pill Rating</div>
               <div class="box-body">
-                <select id="example-pill" name="rating">
+                <select id="example-pill" name="rating" autocomplete="off">
                   <option value="A">A</option>
                   <option value="B">B</option>
                   <option value="C">C</option>
@@ -141,7 +141,7 @@
             <div class="box box-green box-large box-example-reversed">
               <div class="box-header">Reversed Rating</div>
               <div class="box-body">
-                <select id="example-reversed" name="rating">
+                <select id="example-reversed" name="rating" autocomplete="off">
                   <option value="Strongly Agree">Strongly Agree</option>
                   <option value="Agree">Agree</option>
                   <option value="Neither Agree or Disagree" selected="selected">Neither Agree or Disagree</option>
@@ -155,7 +155,7 @@
             <div class="box box-orange box-large box-example-horizontal">
               <div class="box-header">Horizontal Rating</div>
               <div class="box-body">
-                <select id="example-horizontal" name="rating">
+                <select id="example-horizontal" name="rating" autocomplete="off">
                   <option value="10">10</option>
                   <option value="9">9</option>
                   <option value="8">8</option>
@@ -177,7 +177,7 @@
               <h1>How about star ratings?</h1>
               <p>The plugin comes with a few flavours of star ratings compatible with popular libraries.</p>
               <div class="stars stars-example-fontawesome">
-                <select id="example-fontawesome" name="rating">
+                <select id="example-fontawesome" name="rating" autocomplete="off">
                   <option value="1">1</option>
                   <option value="2">2</option>
                   <option value="3">3</option>
@@ -187,7 +187,7 @@
                 <span class="title">Font Awesome</span>
               </div>
               <div class="stars stars-example-css">
-                <select id="example-css" name="rating">
+                <select id="example-css" name="rating" autocomplete="off">
                   <option value="1">1</option>
                   <option value="2">2</option>
                   <option value="3">3</option>
@@ -197,7 +197,7 @@
                 <span class="title">CSS Stars</span>
               </div>
               <div class="stars stars-example-bootstrap">
-                <select id="example-bootstrap" name="rating">
+                <select id="example-bootstrap" name="rating" autocomplete="off">
                   <option value="1">1</option>
                   <option value="2">2</option>
                   <option value="3">3</option>
@@ -212,7 +212,7 @@
             <div class="star-ratings">
               <p>It can be used to display fractional star ratings.</p>
               <div class="stars stars-example-fontawesome-o">
-                <select id="example-fontawesome-o" name="rating" data-current-rating="5.6">
+                <select id="example-fontawesome-o" name="rating" data-current-rating="5.6" autocomplete="off">
                   <option value=""></option>
                   <option value="1">1</option>
                   <option value="2">2</option>
