Add triggerChange option

--- a/examples/index.html
+++ b/examples/index.html
@@ -386,6 +386,10 @@ npm install jquery-bar-rating
               <strong>silent: false</strong><br>
               Supress callbacks when controlling ratings programatically.
             </p>
+            <p>
+              <strong>triggerChange: true</strong><br>
+              Trigger change event on the select field when ratings are set or reset.
+            </p>
           </div>
         </div>
 
